--- a/grid.html
+++ b/grid.html
@@ -5,22 +5,33 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/grid.css">
+    <script src="js/jquery-3.6.4.min.js"></script>
+    <script src="js/funciones.js"></script>
     <title>Ejemplo de un template plantilla grid</title>
 </head>
 <body id="contenedor">
     <header id="encabezado">
-        <h1>Ejemplo de Grid Template</h1>
+        <h1 style="text-align: center;" id="titulo">Ejemplo de Grid Template</h1>
     </header>
     <aside id="lateral">
+        <h2>Menu</h2>
         <nav id="menu">
 
         </nav>
     </aside>
     <main id="contenido">
         <h2>Formulario</h2>
+        <form action="">
+            <div id="control1">
+                <label for="Nombre">Nombre </label>
+                <input type="text" id="nombre" name="nombre">
+            </div>
+            <button type="button" id="boton">Calcular algo</button>
+
+        </form>
     </main>
     <footer id="pie">
-        Derechos reservados.
+        <address>Derechos reservados.</address>
     </footer>
 </body>
 </html>
